--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,7 +22,11 @@
   <meta name="msvalidate.01" content="{{ site.bing_verify }}">{% endif %}
 
   <!-- Custom Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
+  <style> @import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap'); </style>
   <link rel="stylesheet" href="{{ " css/font-awesome/css/all.min.css" }}">
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Jost:wght@300;500&display=swap" rel="stylesheet">
+  <style> @import url('https://fonts.googleapis.com/css2?family=Jost:wght@300;500&display=swap'); </style>
   <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href="//fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
