--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#page-top">{{ site.title }}</a>
+      <a class="navbar-brand" href="#page-top"><img class="sig" src="sig.png" alt=""><p class="title"><span style="color:#7ab1e7; font-family: 'Jost', sans-serif; font-weight: 500;">Art</span> <span style="color:#d00d1e; font-family: 'Libre Baskerville', serif;">&</span> <span style="color:#427157; font-family: 'Jost', sans-serif; font-weight: 500">Illustration</span></p></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
