--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,13 +8,16 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2"><img src="img/portfolio/cake.png" width="300" height="350" style="float: left; padding-right: 20px;">
-        <p style="padding-top: 20px;">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete
-          source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy
-          customization.</p>
+        <p style="padding-top: 20px;">My name is Blank Blank, and I am an artist from Blank Blank, Blank.</p>
       </div>
       <div class="col-lg-4">
-        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or
-          a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+        <p>From an early age, storybooks and animation captured my imagination, inspiring me to bring ideas of my own to paper. I 
+          sold my first artwork at 12, and by my teens, began sketching portraits for people and their pets. Experimenting with
+        acrylic paints during this time opened up my work to a whole new world of colour.</p>
+      </div>
+      <div class="col-lg-4">
+        <p>Since then, I've continued to create with traditional and digital media, with a special interest in children's illustration
+        and storytelling.</p>
       </div>
     </div>
   </div>
