--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,12 +8,12 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2"><img src="img/portfolio/cake.png" width="300" height="350" style="float: left; padding-right: 20px;">
-        <p style="padding-top: 20px;">My name is Blank Blank, and I am an artist from Blank Blank, Blank.</p>
+        <p style="padding-top: 20px;">My name is Blank Blank, and I am an artist from Blank Blank, Blank.&#13;</p>
       </div>
       <div class="col-lg-4">
         <p>From an early age, storybooks and animation captured my imagination, inspiring me to bring ideas of my own to paper. I 
           sold my first artwork at 12, and by my teens, began sketching portraits for people and their pets. Experimenting with
-        acrylic paints during this time opened up my work to a whole new world of colour.</p>
+        acrylic paints during this time opened up my work to a whole new world of colour.&#13;</p>
       </div>
       <div class="col-lg-4">
         <p>Since then, I've continued to create with traditional and digital media, with a special interest in children's illustration
