--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2"><img src="img/portfolio/cake.png" width="300" height="350" style="float: left; padding-right: 20px;">
-        <p style="padding-top: 20px;">My name is Blank Blank, and I am an artist from Blank Blank, Blank.<br><br></p>
+        <p style="padding-top: 20px;">My name is Blank Blank, and I am an artist from Blank Blank, Blank.<br></p>
       </div>
       <div class="col-lg-4">
         <p>From an early age, storybooks and animation captured my imagination, inspiring me to bring ideas of my own to paper. I 
