--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
       </div>
     </div>
     <img src="img/portfolio/cake.png" width="300" height="350" style="float: left; padding-right: 20px;">
-        <p>My name is Blank Blank, and I am an artist from Blank Blank, Blank.<br><br>
+        <p style="padding-top: 30px;>My name is Blank Blank, and I am an artist from Blank Blank, Blank.<br><br>
           From an early age, storybooks and animation captured my imagination, inspiring me to bring ideas of my own to paper. I 
           sold my first artwork at 12, and by my teens, began sketching portraits for people and their pets. Experimenting with
         acrylic paints during this time opened up my work to a whole new world of colour.<br><br>
