--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,4 +13,5 @@
         acrylic paints during this time opened up my work to a whole new world of colour.<br><br>
         Since then, I've continued to create with traditional and digital media, with a special interest in children's illustration
         and storytelling.</p>
+                  </div>
 </section>
