--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
         <h2>About</h2>
       </div>
     </div>
-    <img src="img/portfolio/cake.png" width="300" height="350" style="float: left; padding-right: 20px;">
+    <div class="bio"><img src="img/portfolio/cake.png" width="300" height="350" style="float: left; padding-right: 20px;">
         <p style="padding-top: 30px;>My name is Blank Blank, and I am an artist from Blank Blank, Blank.<br><br>
           From an early age, storybooks and animation captured my imagination, inspiring me to bring ideas of my own to paper. I 
           sold my first artwork at 12, and by my teens, began sketching portraits for people and their pets. Experimenting with
