--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,6 +6,7 @@
         <h2>About</h2>
       </div>
     </div>
+    <div class="row">
     <div class="col-lg-4"><img src="img/portfolio/cake.png" width="300" height="350" style="float: left; padding-right: 20px;">
         <p style="padding-top: 30px;>My name is Blank Blank, and I am an artist from Blank Blank, Blank.<br><br>
           From an early age, storybooks and animation captured my imagination, inspiring me to bring ideas of my own to paper. I 
@@ -13,5 +14,6 @@
         acrylic paints during this time opened up my work to a whole new world of colour.<br><br>
         Since then, I've continued to create with traditional and digital media, with a special interest in children's illustration
         and storytelling.</p>
+                  </div>
                   </div>
 </section>
