--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 col-lg-offset-2">
+      <div class="col-lg-12">
         <img src="img/portfolio/cake.png" width="300" height="350" style="float: left; padding-right: 20px;"><p>My name is Blank Blank, 
         and I am an artist from Blank Blank, Blank.<br><br>
           From an early age, storybooks and animation captured my imagination, inspiring me to bring ideas of my own to paper. I 
