--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -35,6 +35,7 @@ h6 {
     text-transform: none;
     font-family: 'Jost',"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 500;
+    padding-top: 20px;
 }
 
 hr.star-light,
@@ -136,7 +137,7 @@ header .intro-text .skills {
     }
 
     .navbar-fixed-top .navbar-brand {
-        font-size: 1em;
+        font-size: 1.1em;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s;
@@ -198,7 +199,7 @@ header .intro-text .skills {
 .title {
     float: left;
     margin-top: 10px;
-    font-size: 1.15em;
+    font-size: inherit;
 }
 
 section {
@@ -224,6 +225,10 @@ section.success {
     section.first {
         padding-top: 75px;
     }
+}
+
+#portfolio h2
+    display: none;
 }
 
 #portfolio .portfolio-item {
