--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -434,6 +434,10 @@ footer .footer-below {
     outline: 0;
 }
 
+.btn-default {
+    margin-top: 20px;
+}
+
 .scroll-top {
     z-index: 1049;
     position: fixed;
@@ -484,8 +488,8 @@ footer .footer-below {
 
 .portfolio-modal .close-modal {
     position: absolute;
-    top: 0px;
-    right: 0px;
+    top: 25px;
+    right: 25px;
     width: 70px;
     height: 70px;
     background-color: transparent;
@@ -493,15 +497,15 @@ footer .footer-below {
 }
 
 .portfolio-modal .close-modal:hover {
-    opacity: .3;
+    opacity: .5;
 }
 
 .portfolio-modal .close-modal .lr {
     z-index: 1051;
-    width: 2px;
-    height: 50px;
+    width: 3px;
+    height: 75px;
     margin-left: 35px;
-    background-color: black;
+    background-color: white;
     -webkit-transform: rotate(45deg);
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
@@ -509,16 +513,21 @@ footer .footer-below {
 
 .portfolio-modal .close-modal .lr .rl {
     z-index: 1052;
-    width: 2px;
-    height: 50px;
-    background-color: black;
+    width: 3px;
+    height: 75px;
+    background-color: white;
     -webkit-transform: rotate(90deg);
     -ms-transform: rotate(90deg);
     transform: rotate(90deg);
 }
 
 .modal-body {
-    padding: 0px;
+    padding-bottom: 30px;
+    background-color: white;
+}
+
+.modal-content {
+    background-color: transparent;
 }
 
 .navbar-nav>.active>a {
