--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -314,7 +314,7 @@ section.success {
 
 .btn-outline {
     margin-top: 15px;
-    border: solid 2px #fff;
+    border: solid 2px white;
     font-size: 20px;
     color: white;
     background: 0 0;
