--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -374,7 +374,7 @@ section.success {
 
 .floating-label-form-group::not(:first-child) {
     padding-left: 14px;
-    border-left: 1px solid #eee;
+    border-left: 1px solid #bcc5c5;
 }
 
 .floating-label-form-group-with-value label {
@@ -388,7 +388,7 @@ section.success {
 }
 
 form .row:first-child .floating-label-form-group {
-    border-top: 1px solid #eee;
+    border-top: none;
 }
 
 footer {
