--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -200,6 +200,7 @@ header .intro-text .skills {
     float: left;
     margin-top: 10px;
     font-size: inherit;
+    word-spacing: -2px;
 }
 
 section {
