--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -113,6 +113,11 @@ header .intro-text .skills {
     font-weight: 300;
 }
 
+@media(min-width:1200px) {
+    .container {
+    width: 992px;
+}
+
 @media(min-width:768px) {
     header .container {
         padding-top: 0px;
