--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -467,7 +467,7 @@ footer .footer-below {
 }
 
 .portfolio-modal .modal-content {
-    padding: 35px 0;
+    padding: 25px 0;
     min-height: 100%;
     border: 0;
     border-radius: 0;
@@ -485,6 +485,7 @@ footer .footer-below {
 
 .portfolio-modal .modal-content img {
     margin-bottom: 0px;
+    max-height: calc(-150px + 100vh);
 }
 
 .portfolio-modal .modal-content .item-details {
