--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -231,6 +231,7 @@ section.success {
 #portfolio .portfolio-item {
     right: 0;
     margin: 0 0 15px;
+    box-shadow: 3px 3px 3px lightgray;
 }
 
 #portfolio .portfolio-item .portfolio-link {
