--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -484,6 +484,7 @@ footer .footer-below {
     margin-bottom: 0px;
     padding: 15px 15px 60px 15px;
     max-height: calc(-80px + 100vh);
+    max-width: 750px;
 }
 
 .portfolio-modal .modal-content .item-details {
