--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,6 +6,7 @@
         <h2>Contact</h2>
       </div>
     </div>
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdsotjumr8UENyCQ84tuU4YqvgiC-zQa3dZj7TeHURi7Ebr9Q/viewform?embedded=true" width="640" height="674" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
         <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
