--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -9,11 +9,11 @@
       <div class="col-lg-8 col-lg-offset-2">
         <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
         <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
-        <form name="sentMessage" id="contactForm" novalidate>
+        <form name="sentMessage" id="contactForm" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSdsotjumr8UENyCQ84tuU4YqvgiC-zQa3dZj7TeHURi7Ebr9Q/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="name">Name</label>
-              <input type="text" class="form-control" placeholder="Name" id="name" required
+              <input type="text" class="form-control" placeholder="entry.2005620554" id="entry.2005620554" required
                 data-validation-required-message="Please enter your name.">
               <p class="help-block text-danger"></p>
             </div>
@@ -21,7 +21,7 @@
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="email">Email Address</label>
-              <input type="email" class="form-control" placeholder="Email Address" id="email" required
+              <input type="email" class="form-control" placeholder="entry.1045781291" id="entry.1045781291" required
                 data-validation-required-message="Please enter your email address.">
               <p class="help-block text-danger"></p>
             </div>
@@ -29,7 +29,7 @@
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="message">Message</label>
-              <textarea rows="5" class="form-control" placeholder="Message" id="message" required
+              <textarea rows="5" class="form-control" placeholder="entry.1065046570" id="entry.1065046570" required
                 data-validation-required-message="Please enter a message."></textarea>
               <p class="help-block text-danger"></p>
             </div>
@@ -41,7 +41,7 @@
               <button type="submit" class="btn btn-success btn-lg">Send</button>
             </div>
           </div>
-        </form>
+        </form><iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
       </div>
     </div>
   </div>
