--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -13,7 +13,7 @@
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="name">Name</label>
-              <input type="text" class="form-control" placeholder="entry.2005620554" id="entry.2005620554" required
+              <input type="text" class="form-control" placeholder="Name" id="entry.2005620554" required
                 data-validation-required-message="Please enter your name.">
               <p class="help-block text-danger"></p>
             </div>
@@ -21,7 +21,7 @@
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="email">Email Address</label>
-              <input type="email" class="form-control" placeholder="entry.1045781291" id="entry.1045781291" required
+              <input type="email" class="form-control" placeholder="Email Address" id="entry.1045781291" required
                 data-validation-required-message="Please enter your email address.">
               <p class="help-block text-danger"></p>
             </div>
@@ -29,7 +29,7 @@
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="message">Message</label>
-              <textarea rows="5" class="form-control" placeholder="entry.1065046570" id="entry.1065046570" required
+              <textarea rows="5" class="form-control" placeholder="Message" id="entry.1065046570" required
                 data-validation-required-message="Please enter a message."></textarea>
               <p class="help-block text-danger"></p>
             </div>
