--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -46,9 +46,9 @@
         <script src="assets/js/jquery.min.js"></script>
 <script type="text/javascript">var submitted=false;</script>
 <script type="text/javascript">
-$('#contactForm').on('submit', function(e) {
-  $('#contactForm *').fadeOut(2000);
-  $('#contactForm').prepend('Thank you! Your submission has been received.');
+$('#sentMessage').on('submit', function(e) {
+  $('#sentMessage *').fadeOut(2000);
+  $('#sentMessage').prepend('Thank you! Your submission has been received.');
   });
 </script>
       </div>
