--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -38,10 +38,19 @@
           <div id="success"></div>
           <div class="row">
             <div class="form-group col-xs-12">
-              <button type="submit" value="Submit" class="btn btn-success btn-lg">Submit</button>
+              <input type="submit" value="Submit">
             </div>
           </div>
         </form>
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
+        <script src="assets/js/jquery.min.js"></script>
+<script type="text/javascript">var submitted=false;</script>
+<script type="text/javascript">
+$('#gform').on('submit', function(e) {
+  $('#gform *').fadeOut(2000);
+  $('#gform').prepend('Thank you! Your submission has been received.');
+  });
+</script>
       </div>
     </div>
   </div>
