--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -8,11 +8,11 @@
     </div>
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
-        <form action="//formspree.io/{{ site.email }}" method="POST" name="sentMessage" id="contactForm" novalidate>
+        <form name="sentMessage" id="contactForm" novalidate enctype="text/plain" method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSdsotjumr8UENyCQ84tuU4YqvgiC-zQa3dZj7TeHURi7Ebr9Q/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="name">Name</label>
-              <input type="text" name="name" class="form-control" placeholder="Name" id="name" required
+              <input type="text" name="entry.2005620554" class="form-control" placeholder="Name" id="entry.2005620554" required
                 data-validation-required-message="Please enter your name.">
               <p class="help-block text-danger"></p>
             </div>
@@ -20,7 +20,7 @@
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="email">Email Address</label>
-              <input type="email" name="_replyto" class="form-control" placeholder="Email Address" id="email" required
+              <input type="email" name="entry.1045781291" class="form-control" placeholder="Email Address" id="entry.1045781291" required
                 data-validation-required-message="Please enter your email address.">
               <p class="help-block text-danger"></p>
             </div>
@@ -32,7 +32,7 @@
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="message">Message</label>
-              <textarea rows="5" name="message" class="form-control" placeholder="Message" id="message" required
+              <textarea rows="5" name="entry.1065046570" class="form-control" placeholder="Message" id="entry.1065046570" required
                 data-validation-required-message="Please enter a message."></textarea>
               <p class="help-block text-danger"></p>
             </div>
