--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -45,6 +45,7 @@
             </div>
           </div>
         </form>
+        <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
       </div>
     </div>
   </div>
