--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -8,7 +8,7 @@
     </div>
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
-        <form name="sentMessage" id="contactForm" novalidate enctype="text/plain" method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSdsotjumr8UENyCQ84tuU4YqvgiC-zQa3dZj7TeHURi7Ebr9Q/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
+        <form name="sentMessage" id="contactForm" enctype="text/plain" method="POST" action="https://docs.google.com/forms/d/e/1FAIpQLSdsotjumr8UENyCQ84tuU4YqvgiC-zQa3dZj7TeHURi7Ebr9Q/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
               <label for="name">Name</label>
