--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -6,29 +6,17 @@
         <h2>Contact</h2>
       </div>
     </div>
-    <div class="row">
-      <div class="col-lg-8 col-lg-offset-2">
         <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSdsotjumr8UENyCQ84tuU4YqvgiC-zQa3dZj7TeHURi7Ebr9Q/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
   Name:<br>
   <input type="text" name="entry.2005620554" id="entry.2005620554"><br>
   Email Address:<br>
-  <input type="text" name="entry.1045781291" id="entry.1045781291">
+  <input type="text" name="entry.1045781291" id="entry.1045781291"><br>
   Message:<br>
   <input type="text" name="entry.1065046570" id="entry.1065046570"><br>
   <input type="submit" value="Submit">
 </form>
 
 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
-        
-        <script src="assets/js/jquery.min.js"></script>
-<script type="text/javascript">var submitted=false;</script>
-<script type="text/javascript">
-$('#gform').on('submit', function(e) {
-  $('#gform *').fadeOut(2000);
-  $('#gform').prepend('Your submission has been processed...');
-  });
-</script>
-      </div>
-    </div>
+
   </div>
 </section>
