--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -1,10 +1,7 @@
 <!-- Contact Section -->
 <section id="contact">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
         <h2>Contact</h2>
-      </div>
     </div>
         <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSdsotjumr8UENyCQ84tuU4YqvgiC-zQa3dZj7TeHURi7Ebr9Q/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
   Name:<br>
@@ -13,19 +10,8 @@
   <input type="text" name="entry.1045781291" id="entry.1045781291"><br>
   Message:<br>
   <input type="text" name="entry.1065046570" id="entry.1065046570"><br>
-  <input type="submit" value="Submit">
+  <button type="submit" class="btn btn-success btn-lg">Submit</button>
 </form>
-
-<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
-    
-<script src="assets/js/jquery.min.js"></script>
-<script type="text/javascript">var submitted=false;</script>
-<script type="text/javascript">
-$('#gform').on('submit', function(e) {
-  $('#gform *').fadeOut(2000);
-  $('#gform').prepend('Your submission has been processed...');
-  });
-</script>
 
   </div>
 </section>
