--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -4,16 +4,8 @@
         <h2>Contact</h2>
     </div>
   
-  <script src="assets/js/jquery.min.js"></script>
-<script type="text/javascript">var submitted=false;</script>
-<script type="text/javascript">
-$('#gform').on('submit', function(e) {
-  $('#gform *').fadeOut(2000);
-  $('#gform').prepend('Your submission has been processed...');
-  });
-</script>
-  
-  <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
+  <script type="text/javascript">var submitted=false;</script>
+<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='https://portfoliola.github.io';}"></iframe>
   
         <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSdsotjumr8UENyCQ84tuU4YqvgiC-zQa3dZj7TeHURi7Ebr9Q/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
   Name:<br>
