--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -1,9 +1,12 @@
 <!-- Contact Section -->
 <section id="contact">
   <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
         <h2>Contact</h2>
     </div>
-  
+  </div>
+    <div class="col-lg-8 col-lg-offset-2">
   <script type="text/javascript">var submitted=false;</script>
 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='https://portfoliola.github.io';}"></iframe>
   
