--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -3,22 +3,53 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>Contact</h2>
+        <h2>Contact Me</h2>
+        <hr class="star-primary">
+      </div>
     </div>
-  </div>
-    <div class="col-lg-8 col-lg-offset-2">
-  <script type="text/javascript">var submitted=false;</script>
+    <div class="row">
+      <div class="col-lg-8 col-lg-offset-2">
+<script type="text/javascript">var submitted=false;</script>
 <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='https://portfoliola.github.io/thank-you.html';}"></iframe>
-  
-        <form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/e/1FAIpQLSdsotjumr8UENyCQ84tuU4YqvgiC-zQa3dZj7TeHURi7Ebr9Q/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
-  Name:<br>
-  <input type="text" name="entry.2005620554" id="entry.2005620554"><br>
-  Email Address:<br>
-  <input type="text" name="entry.1045781291" id="entry.1045781291"><br>
-  Message:<br>
-  <input type="text" name="entry.1065046570" id="entry.1065046570"><br>
-  <button type="submit" class="btn btn-success btn-lg">Submit</button>
-</form>
-
+        <form action="https://docs.google.com/forms/d/e/1FAIpQLSdsotjumr8UENyCQ84tuU4YqvgiC-zQa3dZj7TeHURi7Ebr9Q/formResponse?" method="POST" name="sentMessage" id="contactForm" novalidate target="hidden_iframe"
+    onsubmit="submitted=true;">
+          <div class="row control-group">
+            <div class="form-group col-xs-12 floating-label-form-group controls">
+              <label for="name">Name</label>
+              <input type="text" name="entry.2005620554" class="form-control" placeholder="Name" id="name" required
+                data-validation-required-message="Please enter your name.">
+              <p class="help-block text-danger"></p>
+            </div>
+          </div>
+          <div class="row control-group">
+            <div class="form-group col-xs-12 floating-label-form-group controls">
+              <label for="email">Email Address</label>
+              <input type="email" name="entry.1045781291" class="form-control" placeholder="Email Address" id="email" required
+                data-validation-required-message="Please enter your email address.">
+              <p class="help-block text-danger"></p>
+            </div>
+          </div>
+          <div>
+            <input type="hidden" name="_subject" value="New submission!">
+            <input type="text" name="_gotcha" style="display:none" />
+          </div>
+          <div class="row control-group">
+            <div class="form-group col-xs-12 floating-label-form-group controls">
+              <label for="message">Message</label>
+              <textarea rows="5" name="entry.1065046570" class="form-control" placeholder="Message" id="message" required
+                data-validation-required-message="Please enter a message."></textarea>
+              <p class="help-block text-danger"></p>
+            </div>
+          </div>
+          <br>
+          <div id="success"></div>
+          <div class="row">
+            <div class="form-group col-xs-12">
+              <button type="submit" class="btn btn-success btn-lg">Send</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
   </div>
 </section>
