--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -10,7 +10,7 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2">
 <script type="text/javascript">var submitted=false;</script>
-<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='https://portfoliola.github.io/thank-you.html';}"></iframe>
+<iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='https://portfoliola.github.io/thank-you.html#contact';}"></iframe>
         <form action="https://docs.google.com/forms/d/e/1FAIpQLSdsotjumr8UENyCQ84tuU4YqvgiC-zQa3dZj7TeHURi7Ebr9Q/formResponse?" method="POST" name="sentMessage" id="contactForm" novalidate target="hidden_iframe"
     onsubmit="submitted=true;">
           <div class="row control-group">
