--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,12 +14,12 @@
 <link rel="manifest" href="/site.webmanifest">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>{{ site.title }}</title>
+  <title>Erika Himsl Art & Illustration</title>
   <meta name="viewport" content="width=device-width">
   <meta name="description" content="{{ site.description }}">
   <meta name="keywords" content="{{ site.keywords }}" />
   {% if site.meta_author %}
-  <meta name="author" content="{{ site.meta_author }}">{% endif %}
+  <meta name="author" content="Erika Himsl">{% endif %}
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="RSS" href="feed.xml">
 
