--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,12 +14,13 @@
           sold my first artwork at 12, and by my teens, began sketching portraits for people and their pets. Experimenting with
         acrylic paints during this time opened up my work to a whole new world of colour.<br><br>
         Since then, I've continued to create with traditional and digital media, with a special interest in children's illustration
-        and storytelling.</p><img src="img/portfolio/artwork-erika-himsl.jpg" alt="Erika Himsl artwork" style="max-width: 75%;">
+        and storytelling.</p>
       </div>
       <div class="col-lg-4">
         <p></p>
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
+        <img src="img/portfolio/artwork-erika-himsl.jpg" alt="Erika Himsl artwork" style="max-width: 70%; margin-top: 35px;">
       </div>
     </div>
   </div>
