--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,7 +20,7 @@
         <p></p>
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <img src="img/portfolio/artwork-erika-himsl.jpg" alt="Erika Himsl artwork" style="max-width: 70%; margin-top: 35px;">
+        <img src="img/portfolio/artwork-erika-himsl.jpg" alt="Erika Himsl artwork" style="max-width: 70%; min-width: 700px; margin-top: 35px;">
       </div>
     </div>
   </div>
