--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -519,13 +519,10 @@ footer .footer-below {
 
 .portfolio-modal .modal-content img {
     background-color: white;
-    margin-bottom: 0px;
-    padding: 15px 15px 60px 15px;
-    max-height: calc(-140px + 100vh);
-    max-width: 750px;
-    margin-top: 80px;
-    min-width: 110px;
-    min-height: 400px;
+margin-bottom: 0px;
+padding: 15px 15px 60px 15px;
+max-height: calc(-140px + 100vh);
+max-width: 80%;
 }
 
 .portfolio-modal .modal-content .item-details {
