--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -531,6 +531,7 @@ max-width: 80%;
 }
 
 .portfolio-modal .close-modal {
+    display:none;
     position: absolute;
     top: 25px;
     right: 25px;
