--- a/_includes/about.html
+++ b/_includes/about.html
@@ -20,7 +20,25 @@
         <p></p>
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <img src="img/portfolio/artwork-erika-himsl.jpg" alt="Erika Himsl artwork" style="max-width: 70%; min-width: 700px; margin-top: 35px;">
+        <div class="artwork">
+<span style="float: left; padding-left: 35px;">
+<figure class="figure">
+  <img src="img/portfolio/dolphins-on-parade-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Dolphins on Parade">
+  <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Dolphins on Parade" sponsor: Molson<br>Easter Seals & Maritime Forces Atlantic<br>public art project.</i></figcaption>
+</figure></span> 
+
+<span style="float: left; padding-left: 35px;">
+<figure class="figure">
+  <img src="img/portfolio/cat-nap-detail-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Cat Nap">
+  <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Cat Nap" - acrylic (detail)</i></figcaption>
+</figure></span>
+
+<span style="float: left; padding-left: 35px;">
+<figure class="figure">
+  <img src="img/portfolio/maple-leaves-detail-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Maple Leaves">
+  <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Maple Leaves" - acrylic (detail)</i></figcaption>
+</figure></span>
+</div>
       </div>
     </div>
   </div>
