--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <img class="img-responsive" src="img/portfolio/About.jpg" alt="Erika Himsl" width="300" height="350" style="float: left; margin-right: 35px; margin-bottom: 20px; box-shadow: 3px 3px 3px lightgray;"><p style="padding-top: 20px">
+        <img class="img-responsive" src="img/portfolio/About.jpg" alt="Erika Himsl" width="300" height="350" style="float: left; margin-right: 35px; margin-bottom: 30px; box-shadow: 3px 3px 3px lightgray;"><p style="padding-top: 20px">
         My name is Erika Himsl, and I am an artist from Nova Scotia.<br><br>
           From an early age, storybooks and animation captured my imagination, inspiring me to bring ideas of my own to paper. I 
           sold my first artwork at 12, and by my teens, began sketching portraits for people and their pets. Experimenting with
@@ -23,19 +23,19 @@
         <div class="artwork">
 <span style="float: left; padding-left: 35px;">
 <figure class="figure">
-  <img src="img/portfolio/dolphins-on-parade-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Dolphins on Parade">
+  <img src="img/portfolio/dolphins-on-parade-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Dolphins on Parade" style="box-shadow: 3px 3px 3px lightgray;">
   <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Dolphins on Parade" sponsor: Molson<br>Easter Seals & Maritime Forces Atlantic<br>public art project.</i></figcaption>
 </figure></span> 
 
 <span style="float: left; padding-left: 35px;">
 <figure class="figure">
-  <img src="img/portfolio/cat-nap-detail-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Cat Nap">
+  <img src="img/portfolio/cat-nap-detail-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Cat Nap" style="box-shadow: 3px 3px 3px lightgray;">
   <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Cat Nap" - acrylic (detail)</i></figcaption>
 </figure></span>
 
 <span style="float: left; padding-left: 35px;">
 <figure class="figure">
-  <img src="img/portfolio/maple-leaves-detail-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Maple Leaves">
+  <img src="img/portfolio/maple-leaves-detail-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Maple Leaves" style="box-shadow: 3px 3px 3px lightgray;">
   <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Maple Leaves" - acrylic (detail)</i></figcaption>
 </figure></span>
 </div>
