--- a/_includes/about.html
+++ b/_includes/about.html
@@ -8,7 +8,7 @@
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <img class="img-responsive" src="img/portfolio/About.jpg" alt="Erika Himsl" width="300" height="350" style="float: left; margin-right: 35px; margin-bottom: 30px; box-shadow: 3px 3px 3px lightgray;"><p style="padding-top: 20px">
+        <img class="img-responsive" src="img/portfolio/About.jpg" alt="Erika Himsl" width="300" height="350" style="float: left; margin-right: 35px; margin-bottom: 30px; box-shadow: 3px 3px 3px lightgray;"><p style="padding-top: 20px; padding-bottom: 30px;">
         My name is Erika Himsl, and I am an artist from Nova Scotia.<br><br>
           From an early age, storybooks and animation captured my imagination, inspiring me to bring ideas of my own to paper. I 
           sold my first artwork at 12, and by my teens, began sketching portraits for people and their pets. Experimenting with
