--- a/_includes/about.html
+++ b/_includes/about.html
@@ -24,7 +24,7 @@
 <span style="float: left; padding-left: 35px;">
 <figure class="figure">
   <img src="img/portfolio/dolphins-on-parade-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Dolphins on Parade" style="box-shadow: 3px 3px 3px lightgray;">
-  <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Dolphins on Parade" sponsor: Molson<br>Easter Seals & Maritime Forces Atlantic<br>public art project.</i></figcaption>
+  <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Dolphins on Parade" sponsor: Molson<br>Easter Seals & Maritime Forces Atlantic<br>public art project</i></figcaption>
 </figure></span> 
 
 <span style="float: left; padding-left: 35px;">
