--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -372,6 +372,7 @@ padding: 2px 6px;
 
 .btn-success {
     background-color: #a27;
+    border: 1px solid transparent;
 }
 
 .floating-label-form-group {
