--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -372,7 +372,7 @@ padding: 2px 6px;
 
 .btn-success {
     background-color: #a27;
-    border: 1px solid transparent;
+      border-color: #a27;
 }
 
 .floating-label-form-group {
