--- a/_includes/about.html
+++ b/_includes/about.html
@@ -30,7 +30,7 @@
   <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Cat Nap" - acrylic (detail)</i></figcaption>
 </figure></span>
 
-<span style="float: left; padding-left: 18px;">
+<span style="float: right; padding-right: 25px;">
 <figure class="figure">
   <img src="img/portfolio/maple-leaves-detail-erika-himsl.jpg" class="figure-img img-fluid rounded" alt="Maple Leaves" style="box-shadow: 3px 3px 3px lightgray;">
   <figcaption class="figure-caption" style="text-align: center; padding-top: 10px; padding-bottom: 35px;"><i>"Maple Leaves" - acrylic (detail)</i></figcaption>
